[package]
name = "perforate"
version = "0.1.4"
edition = "2021"
authors = ["Luke Peterson <luketpeterson@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A macro to generate variants of a struct to allow the taking of a field for extended periods of time"
repository = "https://github.com/luketpeterson/summum-types"
readme = "README.md"
keywords = ["macro", "hole", "structure"]
categories = ["rust-patterns", "algorithms", "data-structures", ]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
proc-macro2 = { version = "1.0.79" }
syn = { version = "2.0.52", features = ["full", "extra-traits"] } #extra-traits GOAT, disable
heck = "0.4.1"

